welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:1: error: Missing closing brace `}' assumed here
while (!estFaceMur()){
^Balin:7: error: ';' expected but 'else' found.
	}else avance();
         ^